<resources>
    <string name="app_name">FineMoodNote</string>
    <string name="home">主页</string>
    <string name="me">我</string>
    <string name="login">登录</string>
    <string name="plan">计划</string>
    <string name="memo">备忘录</string>
    <string name="custom_manager">客户管理</string>
    <string name="new_plan">-点击添加新的计划-</string>
    <string name="describe_the_plan">添加计划条目</string>
    <string name="unfinished">未完成</string>
    <string name="finished">完  成</string>
    <string name="state">状态</string>
    <string name="confirm">确定</string>
    <string name="date_picker">日期选择</string>
    <string name="a_new_plan">新的计划</string>
    <string name="important">重要</string>
    <string name="commonly">一般</string>
    <string name="not_important">不重要</string>
    <string name="plan_title">给你的计划命一个标题</string>
    <string name="toast_no_plan">当前计划没有任务</string>
    <string name="toast_time_pick">请选择日期和写标题</string>
    <string name="toast_is_date_userful">改变不了过去，但可以把握好未来！</string>
    <string name="date_type_ymd">yyyy-MM-dd</string>
    <string name="Snakcar_cancel_plan">取消这个计划</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="cancel">取消</string>
    <string name="keep_time">倒计时</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="second">秒</string>

</resources>
